Implemented simple user login and registering

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,29 +1,122 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(233, 233, 233);
-    background-color: #212425;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: #e5e7e9;
+    background-color: #1b1b1b;
 }
 
-.center-page {
-    max-width: 95%;
-    min-width: 500px;
-    margin: auto;
-    padding-bottom: 20px;
-    background-color: rgb(54, 54, 54);
-    border-radius: 0.3rem;
+iframe {
+    box-sizing: content-box;
+    display: block;
+    width: 100%;
+    height: 65px;
+    border: none;
 }
 
-.center-text {
-    text-align: center;
-    padding: 1px 0;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10%;
+    background-color: #141414;
+    border-bottom: solid 5px #8a1515;
 }
 
-.btn {
-    color: rgb(214, 214, 214);
+header * {
+    background-color: #141414;
+}
+
+header li {
+    line-height: 40px;
+    border-left: solid 2px #0f0f0f;
+}
+
+header li:last-child {
+    border-right: solid 2px #0f0f0f;
+}
+
+li, a, button {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.nav-links {
+    list-style: none;
+}
+
+.nav-links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav-links li a {
+    transition: all 0.2s ease 0s;
+}
+
+.nav-links li a:hover {
+    color: #8a1515;
+}
+
+button {
     font-weight: 600;
     text-decoration: none;
     padding: 3px 10px;
     margin: 10px;
-    background-color: rgb(83, 83, 83);
-    border-radius: 2px;
+    color: rgb(214, 214, 214);
+    background-color: rgba(83, 83, 83, 1);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s ease 0s;
+}
+
+button:hover {
+    background-color: rgba(83, 83, 83, 0.8);
+}
+
+.center-page {
+    margin: auto;
+    max-width: 1080px;
+}
+
+.center-contents {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    max-width: 400px;
+    border: 3px solid #575757;
+    padding: 15px;
+    margin: 10px;
+}
+
+label {
+    margin-left: 10px;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: none;
+    font-size: 14px;
+    border-radius: 5px;
+    border-bottom: dotted 3px #0f0f0f;
+    background-color: #242424;
+    transition: all 0.4s ease 0s;
+}
+
+input[type=text]:focus, input[type=password]:focus, input[type=text]:not(:placeholder-shown), input[type=password]:not(:placeholder-shown) {
+    border-bottom: solid 3px #8a1515;
+    background-color: #464646;
+}
+
+input[type=text]:valid, input[type=password]:valid {
+    border-bottom: solid 3px #163f0b;
+    background-color: #464646;
 }
