--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -7,14 +7,6 @@
     background-color: #1b1b1b;
 }
 
-iframe {
-    box-sizing: content-box;
-    display: block;
-    width: 100%;
-    height: 65px;
-    border: none;
-}
-
 header {
     display: flex;
     justify-content: space-between;
@@ -43,20 +35,20 @@ li, a, button {
     font-size: 16px;
 }
 
-.nav-links {
+nav {
     list-style: none;
 }
 
-.nav-links li {
+nav li {
     display: inline-block;
     padding: 0px 20px;
 }
 
-.nav-links li a {
+nav li a {
     transition: all 0.2s ease 0s;
 }
 
-.nav-links li a:hover {
+nav li a:hover {
     color: #8a1515;
 }
 
@@ -75,16 +67,6 @@ button {
 
 button:hover {
     background-color: rgba(83, 83, 83, 0.8);
-}
-
-.center-page {
-    margin: auto;
-    max-width: 1080px;
-}
-
-.center-contents {
-    display: flex;
-    justify-content: center;
 }
 
 form {
@@ -119,4 +101,40 @@ input[type=text]:focus, input[type=password]:focus, input[type=text]:not(:placeh
 input[type=text]:valid, input[type=password]:valid {
     border-bottom: solid 3px #163f0b;
     background-color: #464646;
+}
+
+.center-page {
+    margin: auto;
+    max-width: 1080px;
+}
+
+.center-contents {
+    display: flex;
+    justify-content: center;
+}
+
+.link-box {
+    max-width: 400px;
+    border: 3px solid #575757;
+    padding: 20px;
+    margin: 10px;
+}
+
+.link-box li {
+    list-style: none;
+    padding: 5px;
+    margin: 2px;
+}
+
+.link-box li img {
+    background-color: #464646;
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+}
+
+.link-box a {
+    background-color: #464646;
+    padding: 5px;
+    border-radius: 4px;
 }
