--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -69,8 +69,8 @@ button:hover {
     background-color: rgba(83, 83, 83, 0.8);
 }
 
-form {
-    max-width: 400px;
+form, .link-box {
+    width: 400px;
     border: 3px solid #575757;
     padding: 15px;
     margin: 10px;
@@ -113,13 +113,6 @@ input[type=text]:valid, input[type=password]:valid {
     justify-content: center;
 }
 
-.link-box {
-    max-width: 400px;
-    border: 3px solid #575757;
-    padding: 20px;
-    margin: 10px;
-}
-
 .link-box li {
     list-style: none;
     padding: 5px;
@@ -137,4 +130,9 @@ input[type=text]:valid, input[type=password]:valid {
     background-color: #464646;
     padding: 5px;
     border-radius: 4px;
+}
+
+.logo {
+    height: 50px;
+    vertical-align: middle;
 }
